# focal-femme

./: .gitignore  README.md  install_models.bat  install_models.sh  pyproject.toml
.claude/: settings.local.json
focal_femme/: __init__.py  beauty_model.py  beauty_scut.py  cli.py  clusterer.py  detector.py  gender_model.py  model_setup.py  renamer.py  retinaface_detector.py  utils.py
focal_femme/retinaface/models/: retinaface.py
focal_femme/retinaface/models/backbones/: mobilenetv1.py  mobilenetv2.py
scripts/: setup_models.py
tests/: __init__.py  test_beauty_model.py  test_clusterer.py  test_detector.py  test_renamer.py  test_utils.py
